Bug 695882: ensure function protypes are available

There are some special defines on Linux to include prototypes for pread, pwrite
and pthread_mutexattr_settype: add these to our "unistd_.h" header.

Also, tweak the the configure script to check for prototypes as well as just
successful linking before including the code that uses those functions

No cluster differences